<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">QLNhanVien</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
	<string name="tendangnhap">Tên Đăng Nhập</string>
	<string name="hinttendangnhap">Nhập tài khoản</string>
	<string name="hintmatkhau">Nhập mật khẩu</string>
	<string name="dongy">Đồng ý</string>
	<string name="thoat">Thoát</string>
	<string name="titleDangKy">Đăng ký</string>
	<string name="taikhoandangky">Nhập tên tài khoản</string>
	<string name="hintnhaplaimatkhau">Nhập lại mật khẩu</string>
	<string name="menuItemNhanVien">Nhân Viên</string>
	<string name="menuItemPhongBan">Phòng Ban</string>
	<string name="menuItemHeThong">Hệ Thống</string>
	<string name="menuItemLienHe">Liên Hệ</string>
</resources>
