<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <EditText
        android:id="@+id/editTaiKhoanDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/taikhoandangky"
        android:layout_margin="10dp"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editMatKhauDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/hintmatkhau"
        android:layout_margin="10dp"
        />

    <EditText
        android:id="@+id/editNhapLaiMatKhauDK"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:hint="@string/hintnhaplaimatkhau"
        android:layout_margin="10dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button 
            android:id="@+id/btnDangKy"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/titleDangKy"
            android:layout_marginLeft="60dp"
            />

        <Button
            android:id="@+id/btnThoat"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat" 
            />

    </LinearLayout>

</LinearLayout>
