<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/viewDangNhap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tendangnhap"
        android:layout_gravity="center"
        android:layout_marginTop="50dp"
        android:textSize="25dp"
        android:textColor="#000000"
         />

    <EditText
        android:id="@+id/editTenDangNhap"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName" 
        android:hint="@string/hinttendangnhap"
        android:layout_margin="20dp"
        >

        <requestFocus />
    </EditText>

    <EditText
        android:id="@+id/editMatKhau"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPassword" 
        android:layout_margin="20dp"
        android:hint="@string/hintmatkhau"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <Button
            android:id="@+id/btnDangNhap"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dongy"
            android:layout_gravity="center"
            android:layout_marginLeft="80dp"
            android:onClick="DangNhap"
             />

        <Button
            android:id="@+id/btnThoatDN"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/thoat" 
            android:layout_gravity="center"
            />

    </LinearLayout>

</LinearLayout>